--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,205 @@
-.App {
-  text-align: center;
+.policy {
+  background-color: #222;
+  padding: 30px 100px;
+  list-style-type: none;
+  margin-bottom: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content {
+  padding: 30px 0;
+  background-color: #323232;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.productByCategory {
+  width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.card-item:hover {
+  box-shadow: 9px 9px 16px rgb(0 0 0 / 44%), -9px -9px 16px rgb(83 83 86 / 80%);
+}
+
+.cart {
+  width: 600px !important;
+}
+
+.cart__content {
+  border: 1px solid #999;
+  border-radius: 15px;
+  padding: 10px;
+}
+
+.cart__content-product {
+  margin: 3px 0;
+}
+.cart__content-product:not(:last-child) {
+  border-bottom: 1px solid #999;
+}
+
+.cart__content-address {
+}
+
+.color {
+  width: 40px;
+  height: 40px;
+  border-radius: 50% !important;
+}
+
+.color:active {
+  border: 1px solid lightblue;
+}
+
+.btnFacebook {
+  width: 100%;
+  height: 41px;
+  border-radius: 4px;
+  background: #3b5998;
   color: white;
+  border: 0px transparent;
+  text-align: center;
+  margin: 5px;
+  display: inline-block;
 }
 
-.App-link {
-  color: #61dafb;
+.btnGoogle {
+  margin: 5px;
+  border-radius: 4px !important;
+  text-align: center;
+  box-shadow: none !important;
+  border-radius: 4px;
+  border: 1px solid red !important;
 }
 
-@keyframes App-logo-spin {
+.address-btn-add {
+  margin-bottom: 10px;
+}
+
+.nav-link.active {
+  background-color: #999 !important;
+}
+
+/*custom react-image-gallery */
+.image-gallery-left-nav .image-gallery-svg,
+.image-gallery-right-nav .image-gallery-svg {
+  width: 50px !important;
+  height: 80px !important;
+}
+.image-gallery-slide img {
+  width: 400px !important;
+}
+
+/* search */
+.search,
+.search-result {
+  width: 320px;
+}
+
+.search {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  padding: 0 12px;
+  border-radius: 92px;
+  background-color: #fff;
+}
+
+.search::after {
+  position: absolute;
+  content: "";
+  top: 6px;
+  right: 52px;
+  width: 1px;
+  height: 26px;
+  background-color: rgba(22, 24, 35, 0.4);
+}
+
+.search input {
+  flex: 1;
+  border: none;
+  outline: none;
+  padding: 7px 0;
+  background-color: transparent;
+}
+
+.search-title {
+  font-size: 14px;
+  color: #888;
+  font-weight: 600;
+}
+
+.clear,
+.loading {
+  position: absolute;
+  right: 65px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: rgba(22, 24, 35, 0.34);
+  font-size: 22px;
+}
+
+.clear,
+.mic {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+
+.loading {
+  animation: spinner 1s linear infinite;
+}
+
+@keyframes spinner {
   from {
-    transform: rotate(0deg);
+    transform: translateY(-50%) rotate(0);
   }
   to {
-    transform: rotate(360deg);
+    transform: translateY(-50%) rotate(360deg);
   }
+}
+
+.mic{
+  font-size: 25px;
+}
+
+/* popper wrapper */
+.wrapper {
+  width: 100%;
+  max-height: min((100vh - 96px) - 60px, 734px);
+  /* min-height: 100px; */
+  overflow-y: scroll;
+  background-color: #fff;
+  box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
+  border-radius: 8px;
+  padding: 6px 0 6px 8px;
+}
+
+/* product item */
+.wrapper-product {
+  display: flex;
+  align-items: center;
+  padding-top: 15px;
+  cursor: pointer;
+}
+
+.product {
+  width: 60px;
+  height: 60px;
+}
+
+.info {
+  flex: 1;
+  margin-left: 12px;
+}
+.name {
+  color: #222;
+  font-size: 16px;
+  padding: 0 0 4px;
+  margin-bottom: 0;
+}
+
+.price {
+  color: #444;
+  font-size: 18px;
+  margin-bottom: 0;
 }
