--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .content {
-  padding: 30px 0;
+  padding: 30px 0 70px;
   background-color: #323232;
 }
 
@@ -87,6 +87,30 @@
   width: 400px !important;
 }
 
+/* header */
+.header-category-link {
+  display: inline-block;
+  color: #afb7bd;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+  padding: 10px;
+}
+
+.header-category-link-active {
+  display: inline-block;
+  color: #f5f5f7;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+  padding: 10px;
+}
+
+.header-category-link:hover,
+.header-category-link-active:hover {
+  color: #f5f5f7;
+}
+
 /* search */
 .search,
 .search-result {
@@ -158,7 +182,7 @@
   }
 }
 
-.mic{
+.mic {
   font-size: 25px;
 }
 
@@ -202,4 +226,73 @@
   color: #444;
   font-size: 18px;
   margin-bottom: 0;
+}
+
+.filter-category-link {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 500;
+  margin-left: 10px;
+  padding: 10px;
+  color: #afb7bd;
+}
+
+.filter-category-link:hover,
+.filter-category-link-active:hover {
+  color: #f5f5f7;
+  border-bottom: 1px solid #fff;
+}
+
+.filter-category-link-active {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 500;
+  margin-left: 10px;
+  padding: 10px;
+  color: #f5f5f7;
+  border-bottom: 1px solid #fff;
+}
+
+/* icon cart */
+.cart__quality {
+  position: absolute;
+  top: 0;
+  right: -6px;
+  background-color: #ff361d;
+  border-radius: 50%;
+  color: #fff;
+  display: block;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 600;
+  width: 18px;
+  height: 18px;
+  text-align: center;
+}
+
+.btn-capacity {
+  margin-right: 12px;
+}
+
+/* sidebar */
+.sidebar {
+  background-color: #323232;
+}
+
+.nav-item {
+  margin-left: -20px;
+}
+.nav-link {
+  color: #afb7bd !important;
+  font-weight: 500 !important;
+  font-size: 20px !important;
+}
+
+.nav-link.active,
+.nav-link:hover {
+  background-color: transparent !important;
+  font-weight: 500 !important;
+  color: #fff !important;
 }
